Bug 1046452 - Fix --disable-ion build breakage, r=jandem.